Fix missing border radius issue (Bootstrap issue no. 25110).

--- a/src/scss/_start.scss
+++ b/src/scss/_start.scss
@@ -116,6 +116,9 @@
         background-color: $input-bg;
         border-color: $input-border-color;
         color: inherit;
+        // Fix https://github.com/twbs/bootstrap/issues/25110
+        border-top-right-radius: $input-border-radius-lg;
+        border-bottom-right-radius: $input-border-radius-lg;
 
         &:focus {
           .keyboard-user & {
